--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,600;1,600&display=swap');
 
-
 *{
     font-family: "Plus Jakarta Sans", sans-serif;
     font-weight: 600;
@@ -70,11 +69,19 @@ header{
 
 a{
     text-decoration: none;
+    cursor: pointer;
 }
 
 nav{
     margin-right: 0px;
 }
+
+ul{
+    list-style: none;
+    display: flex;
+    gap: 10px;
+}
+
 
 main{
     background: linear-gradient(to bottom, #f5f9ff, #cce7ff);    
@@ -123,14 +130,16 @@ main{
     padding: 15px;
     border: none;
     border-radius: 10px;
+    cursor: pointer;
 }
 
-#btnBanner02{
+#btnBaixaCurriculo{
     color: black;
     background-color: white;
     padding: 15px;
     border: none;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .linksContato{
@@ -140,6 +149,7 @@ main{
 
 .linksContato a{
     text-decoration: none;
+    color: #0025CC;
 }
 
 ion-icon{
@@ -168,6 +178,7 @@ ion-icon{
 }
 
 .cardProjeto{
+    height: 360px;
     width: 31%;
     border: 1px solid #dcdfdd;
     border-radius: 24px;
@@ -178,6 +189,7 @@ ion-icon{
 
 .cardProjeto > img {
     width: 100%;
+    height: 50%;
     object-fit: cover;
 }
 
@@ -224,4 +236,22 @@ ion-icon{
 
 #skills h1{
     font-size: 2.4rem;
+}
+
+.gradeSkills{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.gradeSkills div{
+     width: 33.33%;   /* 3 por linha */
+  height: 120px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.gradeSkills img {
+    max-width: 100px;
 }
