--- a/src/CSS/mobile.css
+++ b/src/CSS/mobile.css
@@ -19,4 +19,9 @@
         height: 415px;
     width: 100%;
     }
+
+    .capaProjeto button {
+        opacity: 1;
+        transform: translate(-50%, 0);
+    }
 }
