--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -188,14 +188,42 @@ ion-icon{
     box-shadow: 0 6px 16px rgba(0,0,0,0.15);
 }
 
-.cardProjeto > img {
+.capaProjeto{
+    height: 50%;
+    background-size: cover;
+}
+
+.capaProjeto button{
+    padding: 10px;
+    position: relative;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: none;
+    background-color: #0025CC;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+
+    opacity: 0;
+    transform: translate(-50%, 15px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.cardProjeto:hover .capaProjeto button{
+    opacity: 1;
+    transform: translate(-50%, 0);
+}
+
+/* .cardProjeto > img {
     width: 100%;
     height: 50%;
     object-fit: cover;
-}
+} */
 
 .conteudoCardProjeto{
     padding: 15px;
+    height: 50%;
 }
 
 .conteudoCardProjeto h1{
